--- a/index.css
+++ b/index.css
@@ -1,11 +1,10 @@
 body, html {
-	background-color: #000;
 	color: #fff;
 	width: 100%;
 	height: 100%;
-	margin: 0;
-	padding: 0;
 	overflow: hidden;
+	padding: 0;
+	margin: 0;
 }
 
 body {
@@ -31,56 +30,89 @@ body {
 	height: 100%;
 	width: 100%;
 	position: relative;
-	z-index: 1;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	z-index: 1;
 }
 
-	#Title {
-		font-weight:500;
-		color: white;
-		font-size: 100px;
-	}
+#Title {
+	font-weight:500;
+	color: white;
+	font-size: 80px;
+}
 
-	#SignUp {
-		height: 40%;
-		width: 25%;
-		display: flex;
-		flex-direction: column;
-		text-align: center;
-		justify-content: center;
-	}
+#SignUp {
+	height: 400px;
+	max-width: 310px;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+}
 
-		#Status {
-			display: none;
-			font-size: 30px;
-		}
+#Status {
+	display: none;
+	font-size: 30px;
+}
 
-		#Form {
-			display: flex;
-			flex-direction: column;
-			text-align: center;
-		}
+#Form {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
 
-			#SubmitButton {
-				font-size: 30px;
-				height: 50px;
-				width: 200px;
-				background: none;
-				margin: auto;
-				margin-top: 7%;
-				color: #fbfbfb;
-				border-style: none;
-				cursor: pointer;
-			}
+#SubmitButton {
+	font-size: 30px;
+	background: none;
+	margin: auto;
+	margin-top: 25px;
+	color: #fbfbfb;
+	border-style: none;
+	cursor: pointer;
+}
 
-			.clean-input {
-				background: none;
-				border-style: none;
-				border-bottom: solid;
-				font-size:30px;
-				color: #fbfbfb;
-			}
+.clean-input {
+	background: none;
+	border-style: none;
+	border-bottom: solid;
+	font-size: 25px;
+	color: #fbfbfb;
+	text-align: center;
+}
+
+#AboutButton {
+	cursor: pointer;
+}
+
+#AboutOverlay {
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	display: none;
+	background-color: rgba(48, 48, 48, .5);
+	text-align: center;
+}
+
+#TextContainer{
+	margin: auto;
+	margin-top: 7%;
+	background-color: white;
+	color: grey;
+	overflow: scroll;
+	min-height: 300px;
+	max-width: 750px;
+}
+
+#MainText {
+	text-align: justify;
+	padding: 70px;
+}
+
+#MailingListBack {
+	font-weight: 100;
+	text-decoration: underline;
+	cursor: pointer;
+}
