--- a/index.css
+++ b/index.css
@@ -2,14 +2,18 @@ body, html {
 	color: #fff;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	padding: 0;
 	margin: 0;
+	font-family: "Montserrat", "sans-serif";
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	scroll-behavior: smooth;
 }
 
 body {
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
+	background-size: 600% 600%;
 	animation: gradient 15s ease infinite;
 }
 
@@ -26,7 +30,6 @@ body {
 }
 
 #Container {
-	font-family: "Montserrat", "sans-serif";
 	height: 100%;
 	width: 100%;
 	position: relative;
@@ -88,7 +91,6 @@ body {
 }
 
 #AboutOverlay {
-	position: fixed;
 	height: 100%;
 	width: 100%;
 	display: none;
@@ -97,22 +99,22 @@ body {
 }
 
 #TextContainer{
-	margin: auto;
-	margin-top: 7%;
-	background-color: white;
-	color: grey;
-	overflow: scroll;
-	min-height: 300px;
-	max-width: 750px;
+	height: 100%;
+	width: 100%;
+	display: flex;
 }
 
 #MainText {
-	text-align: justify;
+	margin: auto;
+	min-height: 300px;
+	max-width: 750px;
+	text-align: left;
 	padding: 70px;
+	color: white;
+	font-size: 20px;
 }
 
 #MailingListBack {
-	font-weight: 100;
 	text-decoration: underline;
 	cursor: pointer;
 }
