--- a/index.css
+++ b/index.css
@@ -86,6 +86,11 @@ body {
 	text-align: center;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ececec;
+  opacity: 1; /* Firefox */
+}
+
 #AboutButton {
 	cursor: pointer;
 }
