--- a/index.css
+++ b/index.css
@@ -1,125 +1,117 @@
-body, html {
-	color: #fff;
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-	font-family: "Montserrat", "sans-serif";
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	scroll-behavior: smooth;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  color: #484848;
+  font-family: "Roboto", "sans-serif";
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  scroll-behavior: smooth;
 }
 
-body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 600% 600%;
-	animation: gradient 15s ease infinite;
+img {
 }
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+h1 {
+  margin-bottom: 5px;
+}
+
+a {
+  color: inherit;
 }
 
 #Container {
-	height: 100%;
-	width: 100%;
-	position: relative;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	z-index: 1;
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
 }
 
-#Title {
-	font-weight:500;
-	color: white;
-	font-size: 80px;
+#ImageContainer {
+  width: 70%;
+  text-align: center;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-#SignUp {
-	height: 400px;
-	max-width: 250px;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	justify-content: center;
+#ImageContainer img {
+  max-width: 50%;
+  max-height: 50%;
+  margin-bottom: 50px;
 }
 
-#Status {
-	display: none;
-	font-size: 30px;
+#ImageContainer div {
+  margin-bottom: 30px;
+  padding: 0px 15px;
+  padding-bottom: 5px;
+  border-bottom: solid 1px #9575cd;
 }
 
-#Form {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
+#SignupContainer {
+  background-color: #f1eefb;
+  width: 50%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-#SubmitButton {
-	font-size: 30px;
-	background: none;
-	margin: auto;
-	margin-top: 25px;
-	color: #fbfbfb;
-	border-style: none;
-	cursor: pointer;
+#SignupContainer img {
+  max-width: 30%;
 }
 
-.clean-input {
-	background: none;
-	border-style: none;
-	border-bottom: solid;
-	font-size: 25px;
-	color: #fbfbfb;
-	text-align: center;
+.helper-text {
+  text-align: none;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #ececec;
-  opacity: 1; /* Firefox */
+.email {
+  &:not(.mdc-text-field--invalid) {
+  }
+  &.mdc-text-field--focused:not(.mdc-text-field--invalid) {
+  }
+
+  display: block;
+  width: 300px;
+  margin: 10px auto;
+
+  border: solid 1px #9575cd;
+  border-bottom: none;
 }
 
-#AboutButton {
-	cursor: pointer;
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 300px;
+  margin: auto;
 }
 
-#AboutOverlay {
-	height: 100%;
-	width: 100%;
-	display: none;
-	background-color: rgba(48, 48, 48, .5);
-	text-align: center;
+.button-container button {
+  margin: 3px;
 }
 
-#TextContainer{
-	height: 100%;
-	width: 100%;
-	display: flex;
+#Submit {
+  background-color: #4527a0;
 }
 
-#MainText {
-	margin: auto;
-	min-height: 300px;
-	max-width: 750px;
-	text-align: left;
-	padding: 70px;
-	color: white;
-	font-size: 20px;
+.header {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 25px;
 }
 
-#MailingListBack {
-	text-decoration: underline;
-	cursor: pointer;
+#SignInContainer {
+  position: absolute;
+  bottom: 25px;
+  font-size: 12px;
+  text-align: center;
+  width: 100%;
+}
+
+#SignIn {
+  font-size: 12px;
 }
